syntax = "proto3";

package fakegenerator;
import "FakeGeneratorMessages.proto";

service FakeGenerator {
    rpc GetUser(EmptyMessage) returns (User);
    rpc GetAddress(EmptyMessage) returns (Address);
    rpc GetEmail(EmptyMessage) returns (Email);
    rpc GetDate(EmptyMessage) returns (Date);
}